@@ -1,4 +1,4 @@
 {#-
   This file was automatically generated - do not edit
 -#}
-{% macro t(key) %}{{ { "language": "zh", "clipboard.copy": "复制", "clipboard.copied": "已复制", "edit.link.title": "编辑此页", "footer.previous": "后退", "footer.next": "前进", "meta.comments": "评论", "meta.source": "来源", "search.language": "ja", "search.placeholder": "搜索", "search.result.placeholder": "键入以开始搜索", "search.result.none": "没有找到符合条件的结果", "search.result.one": "找到 1 个符合条件的结果", "search.result.other": "# 个符合条件的结果", "search.tokenizer": "[\，\。]+", "skip.link.title": "跳转至", "source.link.title": "前往 Github 仓库", "toc.title": "目录" }[key] }}{% endmacro %}
+{% macro t(key) %}{{ { "language": "zh", "clipboard.copy": "复制", "clipboard.copied": "已复制", "edit.link.title": "编辑此页", "footer.previous": "上一页", "footer.next": "下一页", "meta.comments": "评论", "meta.source": "来源", "search.language": "ja", "search.placeholder": "搜索", "search.result.placeholder": "键入以开始搜索", "search.result.none": "没有找到符合条件的结果", "search.result.one": "找到 1 个符合条件的结果", "search.result.other": "# 个符合条件的结果", "search.tokenizer": "[\，\。]+", "skip.link.title": "跳转至", "source.link.title": "前往 Github 仓库", "toc.title": "目录" }[key] }}{% endmacro %}
