@@ -1,0 +1,42 @@
+<!--
+  Copyright (c) 2016-2019 Martin Donath <martin.donath@squidfunk.com>
+
+  Permission is hereby granted, free of charge, to any person obtaining a copy
+  of this software and associated documentation files (the "Software"), to
+  deal in the Software without restriction, including without limitation the
+  rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+  sell copies of the Software, and to permit persons to whom the Software is
+  furnished to do so, subject to the following conditions:
+
+  The above copyright notice and this permission notice shall be included in
+  all copies or substantial portions of the Software.
+
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
+  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+  IN THE SOFTWARE.
+-->
+
+<!-- Translation: Slovenian -->
+{% macro t(key) %}{{ {
+  "language": "si",
+  "clipboard.copy": "Kopiraj v odložišče",
+  "clipboard.copied": "Kopirano v odložišče",
+  "edit.link.title": "Uredi stran",
+  "footer.previous": "Prejšnja stran",
+  "footer.next": "Naslednja stran",
+  "meta.comments": "Komentarji",
+  "meta.source": "Izvorna koda",
+  "search.language": "sk",
+  "search.placeholder": "Išči",
+  "search.result.placeholder": "Vpiši iskalni niz",
+  "search.result.none": "Ni zadetkov",
+  "search.result.one": "1 zadetek",
+  "search.result.other": "# zadetkov",
+  "skip.link.title": "Skoči na vsebino",
+  "source.link.title": "Pojdi na repozitorij",
+  "toc.title": "Kazalo"
+}[key] }}{% endmacro %}
